[package]
name = "examples_common"
version = "0.1.0"
authors = ["Timothy Meade <zt.tmzt@gmail.com>"]

[dependencies.incrust_macros]
path = "../macros"

[dev-dependencies.incrust_plugin]
path = "../plugin"

[dependencies.incrust_plugin]
path = "../plugin"

[dependencies.incrust_common]
path = "../common"
