[package]
authors = ["Timothy Meade <zt.tmzt@gmail.com>"]
name = "incrust_server_example"
version = "0.1.0"

[build-dependencies]

[build-dependencies.incrust_common]
path = "../../common"

[build-dependencies.incrust_macros]
path = "../../macros"

[dependencies]
nickel = "0.8.1"

[dependencies.incrust_common]
path = "../../common"

[dependencies.incrust_macros]
path = "../../macros"

[dependencies.incrust_plugin]
path = "../../plugin"

[dependencies.examples_common]
path = "../../examples_common"

[dev-dependencies.examples_common]
path = "../../examples_common"
